:building_construction: Refactor multiple components